# kaldi-hmm-gmm

./: .flake8  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  requirements.txt  setup.py
.github/workflows/: build-wheels-aarch64.yaml  build-wheels-linux.yaml  build-wheels-macos.yaml  build-wheels-win32.yaml  build-wheels-win64.yaml  build-wheels.yaml  linux-macos-windows.yaml  linux.yaml  macos.yaml  windows.yaml
cmake/: cmake_extension.py  googletest.cmake  kaldi-native-io.cmake  kaldifst.cmake  openfst.cmake  pybind11.cmake  torch.cmake
docs/source/: conf.py  index.rst
docs/source/python-api/: index.rst
docs/source/tutorials/: diag-gmm.rst  hmm.rst  index.rst
egs/yesno/: .gitignore  G.txt  decode.py  run.sh  train.py
egs/yesno/local/: compute_fbank_yesno.py
kaldi-hmm-gmm/: CMakeLists.txt
kaldi-hmm-gmm/csrc/: CMakeLists.txt  am-diag-gmm.cc  am-diag-gmm.h  build-tree-utils.cc  build-tree-utils.h  cluster-utils.cc  cluster-utils.h  clusterable-classes.cc  clusterable-classes.h  clusterable-itf.h  const-integer-set-inl.h  const-integer-set.h  context-dep-itf.h  context-dep.cc  context-dep.h  decodable-am-diag-gmm.cc  decodable-am-diag-gmm.h  decodable-ctc.cc  decodable-ctc.h  decodable-itf.h  decoder-wrappers.cc  decoder-wrappers.h  determinize-lattice-pruned.h  diag-gmm-normal.cc  diag-gmm-normal.h  diag-gmm-test.cc  diag-gmm.cc  diag-gmm.h  eigen-test.cc  eigen.cc  eigen.h  event-map-test.cc  event-map.cc  event-map.h  faster-decoder.cc  faster-decoder.h  hash-list-inl.h  hash-list-test.cc  hash-list.h  hmm-topology.cc  (+25 more)
kaldi-hmm-gmm/python/csrc/: CMakeLists.txt  add-self-loops.cc  add-self-loops.h  am-diag-gmm.cc  am-diag-gmm.h  cluster-utils.cc  cluster-utils.h  clusterable-classes.cc  clusterable-classes.h  context-dep.cc  context-dep.h  decodable-am-diag-gmm.cc  decodable-am-diag-gmm.h  decodable-ctc.cc  decodable-ctc.h  decodable-itf.cc  decodable-itf.h  decoder-wrappers.cc  decoder-wrappers.h  determinize-lattice-pruned.cc  determinize-lattice-pruned.h  diag-gmm.cc  diag-gmm.h  eigen-test.cc  eigen-test.h  event-map.cc  event-map.h  faster-decoder.cc  faster-decoder.h  hmm-topology.cc  hmm-topology.h  hmm-utils.cc  hmm-utils.h  kaldi-hmm-gmm.cc  kaldi-hmm-gmm.h  lattice-faster-decoder.cc  lattice-faster-decoder.h  lattice-simple-decoder.cc  lattice-simple-decoder.h  mle-am-diag-gmm.cc  (+13 more)
kaldi-hmm-gmm/python/kaldi_hmm_gmm/: __init__.py  cluster_utils.py  hmm_topo_utils.py
kaldi-hmm-gmm/python/tests/: CMakeLists.txt  test_am_diag_gmm.py  test_const_event_map.py  test_context_dep.py  test_diag_gmm.py  test_draw_tree.py  test_eigen.py  test_gauss_clusterable.py  test_gmm_update_flags.py  test_hmm_topology.py  test_init_gmm_mono.py  test_mle_am_diag_gmm.py  test_mle_diag_gmm.py  test_scalar_clusterable.py  test_transition_model.py
scripts/: .gitignore  check_style_cpplint.sh  compute_fbank_audio_mnist.py  ctc_topo.py  generate_lexicon.py  generate_test_data.sh  gmm_acc_stats_ali.py  gmm_align_compiled.py  gmm_boost_silence.py  gmm_est.py  gmm_info.py  gmm_init_mono.py  prepare_lang.py  run.sh  test_ctc_topo.py  test_gmm_acc_stats_ali.py  test_gmm_align_compiled.py  test_gmm_boost_silence.py  test_gmm_est.py  test_gmm_init_mono.py  test_prepare_lang.py  test_training_graph_compiler.py  utils.py
